Added 2 apis for stops
